--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^7.6.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
