update .gitignore to exclude kilocode configuration file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ complaint-system/backend/app/database/__pycache__/__init__.cpython-313.pyc
 *.pyc
 *.pyo
 complaint-system/backend/uploads/
+.kilocode/mcp.json
