feat(analytics): add command center dashboard with RAR metrics and comprehensive testing
- Implement new analytics API endpoints for RAR metrics, failure modes, and trends
- Add DashboardPage component with real-time sparklines and responsive design
- Set up comprehensive testing infrastructure with Vitest, Playwright, and pytest
- Add navigation link to dashboard with bilingual support
- Include 90%+ test coverage thresholds and E2E test suite
- Update architecture documentation with testing strategy

--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -7,14 +7,24 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:unit": "vitest --coverage",
+    "test:integration": "vitest --config vitest.integration.config.ts",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@playwright/test": "^1.54.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react-router-dom": "^5.3.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
+    "msw": "^2.10.4",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -22,9 +32,12 @@
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.0",
+    "vitest": "^3.2.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "^24.0.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
