--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@playwright/test": "^1.54.1",
+    "@tanstack/react-table": "^8.21.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -23,6 +24,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.294.0",
     "msw": "^2.10.4",
     "react": "^18.3.1",
@@ -34,6 +36,7 @@
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
     "vitest": "^3.2.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
