feat(ui): add status management and filtering system, WIP animations
implement comprehensive status field support with multi-select filtering
- add status dropdown with color-coded badges in complaint detail drawer
- implement multi-select status filter component for complaints list
- add automatic status transitions when first action is created
- enhance dashboard with real-time status KPI tiles
- add framer-motion animations for smoother UX transitions
- implement client-side caching for improved performance
- update backend to support multiple status filtering via array parameters
- restrict status values to open/in_progress/resolved enum

closes DA-008, DA-009

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ complaint-system/backend/app/database/__pycache__/__init__.cpython-313.pyc
 *.pyo
 complaint-system/backend/uploads/
 .kilocode/mcp.json
+node_modules/
