--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.294.0",
     "msw": "^2.10.4",
     "react": "^18.3.1",
