--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -41,6 +41,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
