--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -38,7 +38,8 @@
     "recharts": "^3.1.0",
     "vitest": "^3.2.4",
     "xlsx": "^0.18.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
