ci(backend,frontend): centralize coverage summary/enforcement and auth E2E setup
Move coverage parsing/enforcement into scripts for backend and frontend
and simplify CI workflows. Add backend coverage Python script and wire
workflows to use it. Update frontend E2E dashboard tests to prime auth
via login and validate authenticated dashboard content.

--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -33,32 +33,7 @@ jobs:
         run: npm ci
 
       - name: Unit/Integration tests with coverage (Vitest)
-        run: |
-          npm run test -- --coverage --run
+        run: npm run test -- --coverage --run
 
-      - name: Upload coverage summary
-        if: always()
-        run: |
-          echo "## Frontend Coverage Summary" >> $GITHUB_STEP_SUMMARY
-          if [ -f coverage/coverage-summary.json ]; then
-            node -e "const s=require('./coverage/coverage-summary.json'); const l=s.total.lines.pct; const b=s.total.branches.pct; console.log('Lines:',l,'Branches:',b);" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "No coverage summary found" >> $GITHUB_STEP_SUMMARY
-          fi
-
-      - name: Enforce coverage thresholds
-        run: |
-          node - <<'NODE'
-const fs = require('fs');
-const path = 'coverage/coverage-summary.json';
-if (!fs.existsSync(path)) { console.log('No coverage summary found, failing'); process.exit(1); }
-const s = JSON.parse(fs.readFileSync(path, 'utf8'));
-const lines = s.total.lines.pct || 0;
-const branches = s.total.branches.pct || 0;
-const minLines = 80, minBranches = 80;
-if (lines < minLines || branches < minBranches) {
-  console.log(`Coverage threshold not met: lines ${lines}% (min ${minLines}%), branches ${branches}% (min ${minBranches}%)`);
-  process.exit(1);
-}
-console.log('Coverage thresholds met');
-NODE
+      - name: Summarize and enforce coverage
+        run: node scripts/ci_frontend_coverage.js
