build(deps): add auth and testing packages; convert CI script to ESM
Update backend requirements with jwt/auth libs (python-jose, passlib,
bcrypt, pyjwt) and add requests/starlette for API interactions. Migrate
frontend coverage script to ESM to align with "type": "module".

--- a/complaint-system/backend/requirements.txt
+++ b/complaint-system/backend/requirements.txt
@@ -7,7 +7,12 @@ python-multipart
 aiofiles
 pillow
 python-magic
+python-jose
+passlib
+bcrypt
+pyjwt
 pytest
 pytest-asyncio
 httpx
-bcrypt
+requests
+starlette
