ci(frontend): switch Vitest to v8 json-summary for coverage
refactor(auth): avoid creating tables at import to prevent test DB errors

--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm ci
 
       - name: Unit/Integration tests with coverage (Vitest)
-        run: npm run test -- --coverage --run
+        run: npm run test -- --run --coverage --coverage.provider=v8 --coverage.reporter=json-summary --coverage.reporter=text
 
       - name: Summarize and enforce coverage
         run: node scripts/ci_frontend_coverage.js
