--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "test:unit": "vitest --coverage",
     "test:integration": "vitest --config vitest.integration.config.ts",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:ci": "vitest --run --coverage --coverage.provider=v8 --coverage.include=src/**/*.{ts,tsx} --coverage.exclude=**/*.d.ts,**/__tests__/**,**/*.stories.tsx,**/e2e/**,scripts/** --coverage.reporter=json-summary --coverage.reporter=text"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -58,5 +59,19 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "vitest": {
+    "coverage": {
+      "provider": "v8",
+      "include": ["src/**/*.{ts,tsx}"],
+      "exclude": [
+        "**/*.d.ts",
+        "**/__tests__/**",
+        "**/*.stories.tsx",
+        "**/e2e/**",
+        "scripts/**"
+      ],
+      "reporter": ["text", "json-summary"]
+    }
   }
 }
