ci(workflows): switch CI to manual dispatch and annotate perf job
Disable push and pull_request triggers for backend, frontend, and e2e
workflows, enabling only workflow_dispatch. Add comment in perf workflow
to indicate soft-disable intent to prevent automatic runs.

--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -1,14 +1,7 @@
 name: Backend CI (pytest + coverage)
 
 on:
-  push:
-    paths:
-      - "complaint-system/backend/**"
-      - ".github/workflows/ci-backend.yml"
-  pull_request:
-    paths:
-      - "complaint-system/backend/**"
-      - ".github/workflows/ci-backend.yml"
+  workflow_dispatch:
 
 jobs:
   test-backend:
