--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -1,14 +1,7 @@
 name: E2E CI (Playwright)
 
 on:
-  push:
-    paths:
-      - "complaint-system/**"
-      - ".github/workflows/ci-e2e.yml"
-  pull_request:
-    paths:
-      - "complaint-system/**"
-      - ".github/workflows/ci-e2e.yml"
+  workflow_dispatch:
 
 jobs:
   e2e:
