feat(auth,ui,api): improve login UX, backend routing, and DB path
Add trailing-slash tolerant auth endpoints, i18n login/logout labels,
and API baseURL normalization to target backend. Ensure SQLite users DB
resolves to a stable absolute path and create parent directory. Update
create_user script import paths and add tests validating login API
routing. Ignore backend .env in git.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ complaint-system/backend/app/database/__pycache__/__init__.cpython-313.pyc
 complaint-system/backend/uploads/
 .kilocode/mcp.json
 node_modules/
+complaint-system/backend/.env
