--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -27,6 +27,8 @@
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.6",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.294.0",
     "msw": "^2.10.4",
     "react": "^18.3.1",
@@ -58,12 +60,14 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^7.1.1"
   },
   "vitest": {
     "coverage": {
       "provider": "v8",
-      "include": ["src/**/*.{ts,tsx}"],
+      "include": [
+        "src/**/*.{ts,tsx}"
+      ],
       "exclude": [
         "**/*.d.ts",
         "**/__tests__/**",
@@ -71,7 +75,10 @@
         "**/e2e/**",
         "scripts/**"
       ],
-      "reporter": ["text", "json-summary"]
+      "reporter": [
+        "text",
+        "json-summary"
+      ]
     }
   }
 }
