--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -24,7 +24,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.6.2",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.6",
     "jspdf": "^3.0.1",
@@ -39,6 +40,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "vitest": "^3.2.4",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4",
