--- a/complaint-system/frontend/package.json
+++ b/complaint-system/frontend/package.json
@@ -35,9 +35,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
@@ -52,6 +54,7 @@
     "@types/node": "^24.0.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-grid-layout": "^1.3.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
